Add redis for products