@@ -6,36 +6,43 @@ import com.geo.util.ProductMapper;
 import com.geo.util.ProductModelMapper;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheConfig;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@CacheConfig(cacheNames = "productsCache")
 public class ProductService {
-
     private final ProductRepository repository;
     private final ProductMapper mapper;
     private final ProductModelMapper modelMapper;
 
+    @CacheEvict(cacheNames = "products", allEntries = true)
     public void create(ProductModel model) {
-        var entity = mapper.apply(model);
-        repository.save(entity);
+        repository.save(mapper.apply(model));
     }
 
+    @Cacheable(cacheNames = "product", key = "#id", unless = "#result == null")
     public ProductModel read(Long id) throws EntityNotFoundException {
-        var entity = repository.findById(id)
-                .orElseThrow(() -> entityNotFoundException(id));
+        var entity = repository.findById(id).orElseThrow(() -> entityNotFoundException(id));
         return modelMapper.apply(entity);
     }
 
+    @Cacheable(cacheNames = "products")
     public List<ProductModel> readAll() {
         return repository.findAll()
                 .stream()
                 .map(modelMapper)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @CacheEvict(cacheNames = "products", allEntries = true)
     public void update(ProductModel model, Long id) throws EntityNotFoundException {
         if (!repository.existsById(id)) {
             throw entityNotFoundException(id);
@@ -45,6 +52,8 @@ public class ProductService {
         repository.save(newEntity);
     }
 
+    @Caching(evict = {@CacheEvict(cacheNames = "product", key = "#id"),
+            @CacheEvict(cacheNames = "products", allEntries = true)})
     public void delete(Long id) throws EntityNotFoundException {
         if (!repository.existsById(id)) {
             throw entityNotFoundException(id);
